// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component matches open snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-1cq7tb4"
    onClick={[Function]}
    position="absolute"
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-t94bnt"
    data-testid="player"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="css-ui4khd"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        className="css-1j7or71"
        fill="outerSpace"
      />
      <circle
        className="css-glnwju"
        fill="saltBox"
      />
      <circle
        className="css-glnwju"
        fill="mischka"
      />
      <g
        className="css-1itd6tp"
      >
        <text
          className="css-pdmncd"
          color="color"
          fill="outerSpace"
          textAnchor="middle"
          x={512}
          y={392}
        >
          Breathe in
        </text>
        <text
          className="css-13elofn"
          color="color"
          fill="outerSpace"
          textAnchor="middle"
          x={512}
          y={392}
        >
          Breathe out
        </text>
        <text
          className="css-1tprw8m"
          color="color"
          fill="mischka"
          textAnchor="middle"
          x={512}
          y={752}
        >
          0
        </text>
        <text
          className="css-1vhvvnq"
          color="color"
          fill="outerSpace"
          textAnchor="middle"
          x={512}
          y={392}
        />
      </g>
    </svg>
  </div>
  <div
    className="css-0"
    position="relative"
  >
    <div
      className="css-1cncp8y"
      position="absolute"
    >
      <span
        backgroundColor="mischka"
        className="css-1bxc77d"
        color="outerSpace"
        position="relative"
      >
        <div
          backgroundColor="mischka"
          className="css-34aj3n"
          position="absolute"
        />
        <div
          className="css-4obz46"
          position="relative"
        >
          Take a break!
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Header component matches snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-z2kty0"
    onClick={[Function]}
    position="absolute"
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-pjuhn5"
    data-testid="player"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="css-63egd1"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        className="css-15od96u"
        fill="outerSpace"
      />
      <circle
        className="css-1ijalb3"
        fill="saltBox"
      />
      <circle
        className="css-1ijalb3"
        fill="mischka"
      />
      <g
        className="css-1itd6tp"
      >
        <text
          className="css-1i93ua"
          color="color"
          fill="outerSpace"
          textAnchor="middle"
          x={NaN}
          y={NaN}
        />
      </g>
    </svg>
  </div>
  <div
    className="css-0"
    position="relative"
  >
    <div
      className="css-1cncp8y"
      position="absolute"
    >
      <span
        backgroundColor="mischka"
        className="css-1bxc77d"
        color="outerSpace"
        position="relative"
      >
        <div
          backgroundColor="mischka"
          className="css-34aj3n"
          position="absolute"
        />
        <div
          className="css-4obz46"
          position="relative"
        >
          Take a break!
        </div>
      </span>
    </div>
  </div>
</div>
`;
